# CoLab-2026-handout

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
.labkit/: config.toml
benchmark/: baseline_rr.cc  event_log.cc  event_log.hpp  metrics.cc  metrics.hpp  runner_main.cc  schedulers.hpp  schedulers_public.cc  schedulers_stub.cc  scoring.cc  scoring.hpp  workload_discovery.cc  workload_discovery.hpp  workload_dsl.cc  workload_dsl.hpp  workload_install.hpp  workload_interpreter.cc  workload_interpreter.hpp
cmake/: SchedlabOptions.cmake  SchedlabSources.cmake  SchedlabTargets.cmake
devices/: device_model.hpp  fifo_device.cc
docs/: scheduler-guide.md  workload-guide.md
include/schedlab/: baseline_scheduler.hpp  debug_api.hpp  device.hpp  queue_view.hpp  scheduler.hpp  system_view.hpp  task_view.hpp  workload_api.hpp
report/: template.md
runtime/: context.cc  context.h  context.hpp  context_ucontext.cc  cpu_burner.cc  cpu_burner.hpp  run_loop.cc  runtime.cc  runtime_workload_context.cc  runtime_workload_context.hpp  sync_registry.hpp  task_entry.cc  task_runtime.cc  task_runtime.hpp  task_state.cc  task_state.hpp  tick_source.cc  tick_source.hpp  timer_queue.cc  timer_queue.hpp  worker.cc  worker.hpp
simulator/: engine.cc  engine.hpp
student/: README.md  context.cc  runtime.cc  runtime.h  scheduler.cc  scheduler.h
tests/: headers_smoke_test.cc
tests/runtime/: context_test.cc  single_worker_loop_test.cc  single_worker_stall_test.cc  tick_preemption_test.cc
tests/student/: student_runtime_surface_test.cc  student_scheduler_smoke_test.cc
tools/: __init__.py  bench.py  bench_config.py  benchlib.py  bootstrap.py  dump_timeline.cc  replay.cc
workloads/public/fairness/: daemon_vs_requests.sched  elephant_vs_mice.sched  equal_tenants.sched  noisy_neighbor.sched  split_vs_bulk.sched  three_tenants.sched  weighted_chain.sched
workloads/public/latency/: bursty_request_queue.sched  interactive_periodic.sched  interactive_vs_batch.sched  load_ramp.sched  priority_inversion.sched  rpc_fanout_join.sched  rpc_fanout_lowcore.sched  service_cascade.sched  wakeup_smoke.sched  wakeup_storm.sched
workloads/public/throughput/: burst_batch_queue.sched  cache_affinity.sched  elephant_mice.sched  phased_pipeline.sched  steal_or_starve.sched  sustained_load.sched  uniform_batch.sched
